cleaned up repo with simple example for python http trigger

--- a/httpTrigger_result.ipynb
+++ b/httpTrigger_result.ipynb
@@ -51,6 +51,64 @@
     "\n",
     "### Think of creative ways to use Azure Functions `HTTP Trigger` in Python Projects!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Time = 20:33:46\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "now = datetime.now()\n",
+    "\n",
+    "current_time = now.strftime(\"%H:%M:%S\")\n",
+    "print(\"Current Time =\", current_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'20:36:28 03/30/21'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.now().strftime(\"%H:%M:%S %D\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
