func dev for bcra calculation

--- a/bcra-app/app/flask-app-testing.ipynb
+++ b/bcra-app/app/flask-app-testing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "\n",
     "import pandas as pd\n",
     "import os\n",
+    "os.environ['R_HOME'] = '/Library/Frameworks/R.framework/Resources/'\n",
     "\n",
     "# Allow R Package import and instal\n",
     "from rpy2.robjects.packages import importr\n",
@@ -48,41 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting rpy2\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f5/53/bebbaa532ce64c5fb9bd99c37c7ed5ec7c1fd870e5a2d0f370e8a089c72e/rpy2-3.4.4-cp37-cp37m-macosx_10_14_x86_64.whl (235kB)\n",
-      "\u001b[K     |████████████████████████████████| 235kB 2.5MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: jinja2 in /Users/etiennejacquot/opt/anaconda3/lib/python3.7/site-packages (from rpy2) (2.10.3)\n",
-      "Requirement already satisfied: cffi>=1.10.0 in /Users/etiennejacquot/opt/anaconda3/lib/python3.7/site-packages (from rpy2) (1.12.3)\n",
-      "Requirement already satisfied: tzlocal in /Users/etiennejacquot/opt/anaconda3/lib/python3.7/site-packages (from rpy2) (1.5.1)\n",
-      "Requirement already satisfied: pytz in /Users/etiennejacquot/opt/anaconda3/lib/python3.7/site-packages (from rpy2) (2019.1)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in /Users/etiennejacquot/opt/anaconda3/lib/python3.7/site-packages (from jinja2->rpy2) (1.1.1)\n",
-      "Requirement already satisfied: pycparser in /Users/etiennejacquot/opt/anaconda3/lib/python3.7/site-packages (from cffi>=1.10.0->rpy2) (2.19)\n",
-      "Installing collected packages: rpy2\n",
-      "Successfully installed rpy2-3.4.4\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install rpy2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['R_HOME'] = '/Library/Frameworks/R.framework/Resources/'"
+    "pip install rpy2"
    ]
   },
   {
@@ -101,16 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<rpy2.rinterface_lib.sexp.NULLType object at 0x7fe3e052ccd0> [RTYPES.NILSXP]"
+       "<rpy2.rinterface_lib.sexp.NULLType object at 0x7fdb0beffaf0> [RTYPES.NILSXP]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +142,7 @@
        " 'risk_summary': 'risk.summary'}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,12 +162,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "absolute_risk = bcra.absolute_risk\n",
-    "check_summary = bcra.check_summary\n",
+    "#absolute_risk = bcra.absolute_risk\n",
+    "#check_summary = bcra.check_summary\n",
     "relative_risk = bcra.relative_risk\n",
     "risk_summary = bcra.risk_summary"
    ]
@@ -212,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,12 +196,12 @@
     "                            'Age1st':24,\n",
     "                            'N_Rels':1,\n",
     "                            'Race':1\n",
-    "                           },index=['id'])"
+    "                           },index=[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,103 +216,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
        "\n",
-       "        <span>R/rpy2 DataFrame (1 x 9)</span>\n",
-       "        <table>\n",
-       "          <thead>\n",
-       "            <tr>\n",
-       "              \n",
-       "              <th>id</th>\n",
-       "              \n",
-       "              <th>T1</th>\n",
-       "              \n",
-       "              <th>T2</th>\n",
-       "              \n",
-       "              <th>...</th>\n",
-       "              \n",
-       "              <th>Age1st</th>\n",
-       "              \n",
-       "              <th>N_Rels</th>\n",
-       "              \n",
-       "              <th>Race</th>\n",
-       "              \n",
-       "            </tr>\n",
-       "          </thead>\n",
-       "          <tbody>\n",
-       "          \n",
-       "          <tr>\n",
-       "            \n",
-       "            <td>\n",
-       "              ...\n",
-       "            </td>\n",
-       "            \n",
-       "            <td>\n",
-       "              ...\n",
-       "            </td>\n",
-       "            \n",
-       "            <td>\n",
-       "              ...\n",
-       "            </td>\n",
-       "            \n",
-       "            <td>\n",
-       "              ...\n",
-       "            </td>\n",
-       "            \n",
-       "            <td>\n",
-       "              ...\n",
-       "            </td>\n",
-       "            \n",
-       "            <td>\n",
-       "              ...\n",
-       "            </td>\n",
-       "            \n",
-       "            <td>\n",
-       "              ...\n",
-       "            </td>\n",
-       "            \n",
-       "          </tr>\n",
-       "          \n",
-       "          </tbody>\n",
-       "        </table>\n",
-       "    "
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>T1</th>\n",
+       "      <th>T2</th>\n",
+       "      <th>N_Biop</th>\n",
+       "      <th>HypPlas</th>\n",
+       "      <th>AgeMen</th>\n",
+       "      <th>Age1st</th>\n",
+       "      <th>N_Rels</th>\n",
+       "      <th>Race</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>40</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>99</td>\n",
+       "      <td>14</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ],
       "text/plain": [
-       "<rpy2.robjects.vectors.DataFrame object at 0x7fe3d00a4e60> [RTYPES.VECSXP]\n",
-       "R classes: ('data.frame',)\n",
-       "[IntSexpVe..., IntSexpVe..., IntSexpVe..., IntSexpVe..., ..., IntSexpVe..., IntSexpVe..., IntSexpVe..., IntSexpVe...]\n",
-       "  id: <class 'rpy2.rinterface.IntSexpVector'>\n",
-       "  <rpy2.rinterface.IntSexpVector object at 0x7fe3cee12be0> [RTYPES.INTSXP]\n",
-       "  T1: <class 'rpy2.rinterface.IntSexpVector'>\n",
-       "  <rpy2.rinterface.IntSexpVector object at 0x7fe3ced447d0> [RTYPES.INTSXP]\n",
-       "  T2: <class 'rpy2.rinterface.IntSexpVector'>\n",
-       "  <rpy2.rinterface.IntSexpVector object at 0x7fe3d067b500> [RTYPES.INTSXP]\n",
-       "  N_Biop: <class 'rpy2.rinterface.IntSexpVector'>\n",
-       "  <rpy2.rinterface.IntSexpVector object at 0x7fe3ced447d0> [RTYPES.INTSXP]\n",
-       "  HypPlas: <class 'rpy2.rinterface.IntSexpVector'>\n",
-       "  <rpy2.rinterface.IntSexpVector object at 0x7fe3d04cebe0> [RTYPES.INTSXP]\n",
-       "  AgeMen: <class 'rpy2.rinterface.IntSexpVector'>\n",
-       "  <rpy2.rinterface.IntSexpVector object at 0x7fe3cf49a280> [RTYPES.INTSXP]\n",
-       "  Age1st: <class 'rpy2.rinterface.IntSexpVector'>\n",
-       "  <rpy2.rinterface.IntSexpVector object at 0x7fe3cec769b0> [RTYPES.INTSXP]\n",
-       "  N_Rels: <class 'rpy2.rinterface.IntSexpVector'>\n",
-       "  <rpy2.rinterface.IntSexpVector object at 0x7fe3cecec870> [RTYPES.INTSXP]\n",
-       "  Race: <class 'rpy2.rinterface.IntSexpVector'>\n",
-       "  <rpy2.rinterface.IntSexpVector object at 0x7fe3cec769b0> [RTYPES.INTSXP]"
+       "   id  T1  T2  N_Biop  HypPlas  AgeMen  Age1st  N_Rels  Race\n",
+       "0   1  40  45       1       99      14      24       1     1"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r_dt"
+    "r_dt.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Looking at relative risk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'RR_Star1': {'1': 4.551158374668021},\n",
+       " 'RR_Star2': {'1': 3.4121387885518226},\n",
+       " 'PatternNumber': {'1': 41.0}}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "relative_risk(r_dt).to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>T1</th>\n",
+       "      <th>T2</th>\n",
+       "      <th>N_Biop</th>\n",
+       "      <th>HypPlas</th>\n",
+       "      <th>AgeMen</th>\n",
+       "      <th>Age1st</th>\n",
+       "      <th>N_Rels</th>\n",
+       "      <th>Race</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>40</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>99</td>\n",
+       "      <td>14</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  T1  T2  N_Biop  HypPlas  AgeMen  Age1st  N_Rels  Race\n",
+       "0   1  40  45       1       99      14      24       1     1"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_dt.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "R[write to console]: Error in dimnames(x) <- dn : \n",
+      "  length of 'dimnames' [2] not equal to array extent\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "RRuntimeError",
+     "evalue": "Error in dimnames(x) <- dn : \n  length of 'dimnames' [2] not equal to array extent\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRRuntimeError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-53-0267210866dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrisk_summary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr_dt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/rpy2/robjects/functions.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    197\u001b[0m                 \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mr_k\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    198\u001b[0m         return (super(SignatureTranslatedFunction, self)\n\u001b[0;32m--> 199\u001b[0;31m                 .__call__(*args, **kwargs))\n\u001b[0m\u001b[1;32m    200\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    201\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/rpy2/robjects/functions.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    123\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m                 \u001b[0mnew_kwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconversion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpy2rpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 125\u001b[0;31m         \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFunction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnew_args\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mnew_kwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    126\u001b[0m         \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconversion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrpy2py\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    127\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/rpy2/rinterface_lib/conversion.py\u001b[0m in \u001b[0;36m_\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_cdata_res_to_rinterface\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m         \u001b[0mcdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m         \u001b[0;31m# TODO: test cdata is of the expected CType\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0m_cdata_to_rinterface\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/rpy2/rinterface.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    678\u001b[0m             )\n\u001b[1;32m    679\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0merror_occured\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 680\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0membedded\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mRRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_rinterface\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_geterrmessage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    681\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    682\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRRuntimeError\u001b[0m: Error in dimnames(x) <- dn : \n  length of 'dimnames' [2] not equal to array extent\n"
+     ]
+    }
+   ],
+   "source": [
+    "risk_summary(r_dt)"
    ]
   },
   {
